translation almost done

--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -562,5 +562,221 @@
   "productNowLiveMessage": "आपका उत्पाद अब मार्केटप्लेस पर लाइव है और खरीदारों द्वारा खोजा जा सकता है!",
   "viewMyProducts": "मेरे उत्पाद देखें",
   "createAnother": "एक और बनाएं",
-  "done": "हो गया"
+  "done": "हो गया",
+  "aiPoweredCraftRequests": "AI-संचालित शिल्प अनुरोध",
+  "notifications": "सूचनाएं",
+  "refresh": "रीफ्रेश",
+  "aiPicks": "AI चुनाव",
+  "allRequests": "सभी अनुरोध",
+  "insights": "अंतर्दृष्टि",
+  "analyzingPreferences": "आपकी प्राथमिकताओं का विश्लेषण कर रहे हैं...",
+  "aiAnalyzingMessage": "हमारा AI आपके लिए सटीक अनुरोध खोज रहा है",
+  "noAiRecommendationsAvailable": "कोई AI सिफारिशें उपलब्ध नहीं",
+  "acceptedRequestsMovedMessage": "बहुत बढ़िया! आपके स्वीकृत अनुरोध प्रगति ट्रैकिंग में स्थानांतरित हो गए हैं",
+  "completeProjectsAiMessage": "हमारे AI को आपकी प्राथमिकताएं सीखने में मदद करने के लिए कुछ प्रोजेक्ट पूरे करें",
+  "refreshRecommendations": "सिफारिशें रीफ्रेश करें",
+  "percentMatch": "{score}% मैच",
+  "percentWin": "{chance}% जीत",
+  "awaitingCustomerResponse": "ग्राहक प्रतिक्रिया की प्रतीक्षा में",
+  "tapViewFullDetails": "पूरे विवरण देखने के लिए कहीं भी टैप करें",
+  "filter": "फिल्टर: ",
+  "available": "उपलब्ध",
+  "open": "खुला",
+  "quoted": "उद्धृत",
+  "inProgress": "प्रगति में",
+  "completed": "पूर्ण",
+  "loadingRequests": "अनुरोध लोड हो रहे हैं...",
+  "errorLoadingRequests": "अनुरोध लोड करने में त्रुटि",
+  "checkInternetRetry": "कृपया अपना इंटरनेट कनेक्शन जांचें और पुनः प्रयास करें",
+  "retry": "पुनः प्रयास",
+  "noActiveRequestsAvailable": "कोई सक्रिय अनुरोध उपलब्ध नहीं",
+  "newOpenRequestsMessage": "नए खुले अनुरोध जिन पर आप बोली लगा सकते हैं यहाँ दिखाई देंगे",
+  "noOpenRequestsAvailable": "कोई खुले अनुरोध उपलब्ध नहीं",
+  "newRequestsQuoteMessage": "नए अनुरोध जिन पर आप बोली लगा सकते हैं यहाँ दिखाई देंगे",
+  "noPendingQuotations": "कोई लंबित उद्धरण नहीं",
+  "quotationsAwaitingMessage": "ग्राहक प्रतिक्रिया की प्रतीक्षा में उद्धरण यहाँ दिखाई देंगे",
+  "noRequestsInProgress": "प्रगति में कोई अनुरोध नहीं",
+  "acceptedRequestsMessage": "आपके स्वीकृत अनुरोध यहाँ दिखाई देंगे",
+  "noCompletedRequests": "कोई पूर्ण अनुरोध नहीं",
+  "completedWorkMessage": "आपका पूर्ण कार्य यहाँ दिखाई देगा",
+  "noRequestsFound": "कोई अनुरोध नहीं मिला",
+  "checkBackLaterMessage": "नए अनुरोधों के लिए बाद में वापस जांचें",
+  "yourPerformance": "आपका प्रदर्शन",
+  "marketOpportunities": "बाजार के अवसर",
+  "strategicRecommendations": "रणनीतिक सिफारिशें",
+  "loadingInsights": "आपकी अंतर्दृष्टि लोड हो रही है...",
+  "noInsightsAvailableYet": "अभी तक कोई अंतर्दृष्टि उपलब्ध नहीं",
+  "completeProjectsInsightsMessage": "अपनी प्रदर्शन अंतर्दृष्टि देखने के लिए कुछ प्रोजेक्ट पूरे करें",
+  "errorOpeningChat": "चैट खोलने में त्रुटि: {error}",
+  "customer": "ग्राहक",
+  "artisan": "शिल्पकार",
+  "noDescriptionProvided": "कोई विवरण प्रदान नहीं किया गया",
+  "budget": "बजट",
+  "quotations": "उद्धरण",
+  "quotation": "उद्धरण",
+  "imagesAvailable": "{count} छवियां उपलब्ध",
+  "openChat": "चैट खोलें",
+  "viewCollaboration": "सहयोग देखें",
+  "startCollaboration": "सहयोग शुरू करें",
+  "markCompleted": "पूर्ण के रूप में चिह्नित करें",
+  "editQuotation": "उद्धरण संपादित करें",
+  "submitQuotation": "उद्धरण जमा करें",
+  "deadlinePassed": "इस अनुरोध की समय सीमा समाप्त हो गई है",
+  "requestDetails": "अनुरोध विवरण",
+  "requestTitle": "शीर्षक",
+  "requestDeadline": "समय सीमा",
+  "images": "छवियां",
+  "myQuotation": "मेरा उद्धरण",
+  "deliveryDate": "डिलीवरी तारीख",
+  "notes": "नोट्स",
+  "status": "स्थिति",
+  "otherQuotations": "अन्य उद्धरण",
+  "noOtherQuotations": "अभी तक कोई अन्य उद्धरण जमा नहीं किया गया",
+  "close": "बंद करें",
+  "priceRupees": "मूल्य (₹)",
+  "enterAmount": "राशि दर्ज करें",
+  "deliveryDateSelection": "डिलीवरी तारीख",
+  "selectDeliveryDate": "डिलीवरी तारीख चुनें",
+  "addNotesOptional": "नोट्स जोड़ें (वैकल्पिक)",
+  "update": "अपडेट",
+  "customerExpectedBy": "ग्राहक की अपेक्षा",
+  "yourDeliveryDate": "आपकी डिलीवरी तारीख",
+  "selectedDate": "चयनित: {date}",
+  "tapToSelectDate": "तारीख चुनने के लिए टैप करें",
+  "dateExceedsCustomerDeadline": "⚠️ आपकी तारीख ग्राहक की समय सीमा के {days} दिन बाद है",
+  "deliveryDateExceedsDeadline": "डिलीवरी तारीख ग्राहक की समय सीमा से अधिक है",
+  "customerDeadlineText": "ग्राहक की समय सीमा: {date}",
+  "yourProposedDate": "आपकी प्रस्तावित तारीख: {date}",
+  "daysAfterDeadline": "समय सीमा के बाद दिन: {days}",
+  "lateDeliveryWarning": "⚠️ चेतावनी: देरी से डिलीवरी का प्रभाव",
+  "lateDeliveryImpactMessage": "ग्राहक की समय सीमा के बाद डिलीवरी करने से:",
+  "lowerAcceptanceChance": "• आपके उद्धरण स्वीकृति की संभावनाएं कम हो सकती हैं",
+  "affectRatings": "• आपकी रेटिंग और भविष्य की सिफारिशें प्रभावित हो सकती हैं",
+  "customerSatisfaction": "• ग्राहक संतुष्टि प्रभावित हो सकती है",
+  "considerRevisiting": "💡 समय पर डिलीवरी के लिए अपनी प्रतिष्ठा बनाए रखने हेतु अपनी समयसीमा पर पुनर्विचार करें या इस अनुरोध को अस्वीकार करें।",
+  "chooseDifferentDate": "अलग तारीख चुनें",
+  "updateQuotation": "उद्धरण अपडेट करें",
+  "noExistingQuotation": "संपादित करने के लिए कोई मौजूदा उद्धरण नहीं मिला।",
+  "quotationUpdated": "उद्धरण अपडेट किया गया",
+  "updatedQuotationMessage": "{artisanName} ने \"{title}\" के लिए अपना उद्धरण अपडेट किया",
+  "quotationSubmitted": "उद्धरण जमा किया गया",
+  "submittedQuotationMessage": "{artisanName} ने \"{title}\" के लिए उद्धरण जमा किया",
+  "editQuotationDialog": "कोटेशन संपादित करें",
+  "submitQuotationDialog": "कोटेशन सबमिट करें",
+  "chat": "चैट",
+  "today": "आज",
+  "yesterday": "कल",
+  "tomorrow": "कल",
+  "daysAgo": "{days} दिन पहले",
+  "inDays": "{days} दिनों में",  
+  "userNotAuthenticated": "उपयोगकर्ता प्रमाणित नहीं",
+  "quotationNotFound": "आपका कोटेशन नहीं मिला",
+  "action": "कार्य: {action}",
+  "impact": "प्रभाव: {impact}",
+  "noReasonProvided": "कोई कारण नहीं दिया गया",
+  "noRecommendationAvailable": "कोई सिफारिश उपलब्ध नहीं",
+  "successRate": "सफलता दर",
+  "avgProjectValue": "औसत प्रोजेक्ट मूल्य",
+  "strongCategories": "मजबूत श्रेणियां",
+  "noPerformanceDataAvailable": "अभी तक कोई प्रदर्शन डेटा उपलब्ध नहीं",
+  "unknown": "अज्ञात",
+  "imagesAttached": "चित्र: {count} संलग्न",
+  "deadlinePassedCannotSubmit": "समय सीमा बीत गई - कोटेशन सबमिट नहीं कर सकते",
+  "untitledRequest": "बिना शीर्षक का अनुरोध",
+  "referenceImages": "संदर्भ चित्र",
+  "deliveryTime": "डिलीवरी समय",
+  "notSpecified": "निर्दिष्ट नहीं",
+  "anonymousArtisan": "गुमनाम कारीगर",
+  "openForCollaboration": "सहयोग के लिए खुला",
+  "manageCollaboration": "सहयोग प्रबंधन",
+  "highPriority": "उच्च प्राथमिकता",
+  "mediumPriority": "मध्यम",
+  "highLabel": "उच्च",
+  "inProgressStatus": "प्रगति में",
+  "youHaveProductsInCategory": "इस श्रेणी में आपके पास {count} उत्पाद हैं",
+  "focusOnCategoryForBetterRate": "बेहतर सफलता दर के लिए {category} अनुरोधों पर ध्यान दें",
+  "focusOnImprovingQuotation": "कोटेशन गुणवत्ता और मूल्य निर्धारण रणनीति में सुधार पर ध्यान दें",
+  "increaseWinRateBy": "जीत दर {percentage} तक बढ़ाएं",
+  "next30Days": "अगले 30 दिन",
+  "statusOpen": "खुला",
+  "statusInProgress": "प्रगति में",
+  "statusCompleted": "पूर्ण",
+  "statusCancelled": "रद्द",
+  "statusDeleted": "हटाया गया",
+  "whyPerfectForYou": "यह आपके लिए क्यों बिल्कुल सही है:",
+  "aiStrategyTip": "AI रणनीति सुझाव:",
+  "quotationSubmittedAwaiting": "कोटेशन सबमिट किया गया - प्रतिक्रिया की प्रतीक्षा में",
+  "noInsightsAvailable": "कोई जानकारी उपलब्ध नहीं",
+  "completeProjectsToSeeInsights": "अपनी प्रदर्शन जानकारी और बाजार के अवसर देखने के लिए कुछ प्रोजेक्ट पूरे करें और कोटेशन सबमिट करें।",
+  "collaborationProjectNotFound": "सहयोग प्रोजेक्ट नहीं मिला। स्थिति रीसेट की गई।",
+  "errorAccessingCollaboration": "सहयोग एक्सेस करने में त्रुटि: {error}",
+  "collaborationProjectCreatedSuccessfully": "सहयोग प्रोजेक्ट सफलतापूर्वक बनाया गया!",
+  "cannotCreateCollaboration": "इस अनुरोध के लिए सहयोग नहीं बनाया जा सकता",
+  "requestMarkedCompleted": "अनुरोध पूर्ण के रूप में चिह्नित किया गया!",
+  "livingWorkshop": "जीवंत कार्यशाला",
+  "artisanForum": "शिल्पकार मंच",
+  "allPosts": "सभी पोस्ट",
+  "trending": "ट्रेंडिंग",
+  "myPosts": "मेरी पोस्ट",
+  "askQuestion": "प्रश्न पूछें",
+  "searchPostsHint": "पोस्ट, टैग या कीवर्ड खोजें...",
+  "allCategories": "सभी श्रेणियां",
+  "unresolvedOnly": "केवल अनसुलझे",
+  "errorLoadingPosts": "पोस्ट लोड करने में त्रुटि: {error}",
+  "noPostsFound": "कोई पोस्ट नहीं मिली",
+  "beFirstToAsk": "पहले प्रश्न पूछने वाले बनें!",
+  "errorLoadingTrendingPosts": "ट्रेंडिंग पोस्ट लोड करने में त्रुटि: {error}",
+  "noTrendingPostsThisWeek": "इस सप्ताह कोई ट्रेंडिंग पोस्ट नहीं",
+  "pleaseLogInToViewPosts": "अपनी पोस्ट देखने के लिए कृपया लॉग इन करें",
+  "errorLoadingYourPosts": "आपकी पोस्ट लोड करने में त्रुटि: {error}",
+  "noQuestionsPostedYet": "आपने अभी तक कोई प्रश्न पोस्ट नहीं किया है",
+  "trendingBadge": "ट्रेंडिंग",
+  "resolvedBadge": "हल हो गया",
+  "voiceMessageIncluded": "वॉइस मैसेज शामिल है",
+  "hoursAgo": "{hours} घंटे पहले",
+  "minutesAgo": "{minutes} मिनट पहले",
+  "justNow": "अभी-अभी",
+  "forumAccessRestricted": "मंच पहुंच केवल विक्रेताओं के लिए सीमित है।",
+  "questionTitle": "प्रश्न शीर्षक *",
+  "questionTitleHint": "आपका प्रश्न क्या है?",
+  "enterQuestionTitle": "कृपया अपने प्रश्न का शीर्षक दर्ज करें",
+  "questionContent": "प्रश्न विवरण",
+  "describeQuestionHint": "अपने प्रश्न का विस्तार से वर्णन करें...",
+  "voiceMessage": "वॉइस मैसेज",
+  "recordVoiceMessage": "अपने प्रश्न को बेहतर तरीके से समझाने के लिए वॉइस मैसेज रिकॉर्ड करें",
+  "voiceRecorded": "वॉइस मैसेज रिकॉर्ड किया गया ({duration})",
+  "removeVoiceMessage": "वॉइस मैसेज हटाएं",
+  "tags": "टैग (कॉमा से अलग)",
+  "tagsHint": "जैसे, धातु कार्य, लकड़ी का काम, मिट्टी के बर्तन",
+  "postQuestion": "प्रश्न पोस्ट करें",
+  "postCreatedSuccessfully": "पोस्ट सफलतापूर्वक बनाया गया!",
+  "errorCreatingPost": "पोस्ट बनाने में त्रुटि: {error}",
+  "ensureSellerLogin": "कृपया सुनिश्चित करें कि आप मंच तक पहुंचने के लिए विक्रेता के रूप में लॉग इन हैं।",
+  "provideContentOrVoice": "कृपया टेक्स्ट सामग्री या वॉइस मैसेज प्रदान करें",
+  "errorAccessingForum": "मंच तक पहुंचने में त्रुटि: {error}",
+  "commentAddedSuccessfully": "टिप्पणी सफलतापूर्वक जोड़ी गई",
+  "errorAddingComment": "टिप्पणी जोड़ने में त्रुटि: {error}",
+  "writeComment": "एक टिप्पणी लिखें...",
+  "addComment": "टिप्पणी जोड़ें",
+  "comments": "टिप्पणियां",
+  "noCommentsYet": "अभी तक कोई टिप्पणी नहीं। मदद करने वाले पहले व्यक्ति बनें!",
+  "markAsResolved": "हल के रूप में चिह्नित करें",
+  "markedAsResolved": "पोस्ट को हल के रूप में चिह्नित किया गया",
+  "errorMarkingResolved": "हल के रूप में चिह्नित करने में त्रुटि: {error}",
+  "playVoiceMessage": "वॉइस मैसेज चलाएं",
+  "stopVoiceMessage": "वॉइस मैसेज रोकें",
+  "transcription": "ट्रांसक्रिप्शन: {text}",
+  "transcriptionLabel": "ट्रांसक्रिप्शन:",
+  "answers": "उत्तर",
+  "acceptedAnswer": "स्वीकृत उत्तर",
+  "helpful": "उपयोगी",
+  "acceptAnswer": "उत्तर स्वीकार करें",
+  "submit": "जमा करें",
+  "markedAsHelpful": "उपयोगी के रूप में चिह्नित",
+  "errorPlayingVoice": "वॉइस मैसेज चलाने में त्रुटि",
+  "markedAsAcceptedAnswer": "स्वीकृत उत्तर के रूप में चिह्नित",
+  "errorGeneral": "त्रुटि: {error}",
+  "postNotFound": "पोस्ट नहीं मिला",
+  "postNotFoundMessage": "पोस्ट नहीं मिला या हटा दिया गया है।",
+  "priority": "प्राथमिकता"
 }
