--- a/lib/l10n/app_ta.arb
+++ b/lib/l10n/app_ta.arb
@@ -264,5 +264,221 @@
   "productNowLiveMessage": "உங்கள் பொருள் இப்போது சந்தையில் நேரலையில் உள்ளது மற்றும் வாங்குபவர்களால் கண்டுபிடிக்கப்படலாம்!",
   "viewMyProducts": "என் பொருட்களைப் பார்க்க",
   "createAnother": "இன்னொன்று உருவாக்க",
-  "done": "முடிந்தது"
+  "done": "முடிந்தது",
+  "aiPoweredCraftRequests": "AI ஆல் இயக்கப்படும் கைவினைக் கோரிக்கைகள்",
+  "notifications": "அறிவிப்புகள்",
+  "refresh": "புதுப்பிப்பு",
+  "aiPicks": "AI தேர்வுகள்",
+  "allRequests": "கோரிக்கைகள்",
+  "insights": "நுண்ணறிவு",
+  "analyzingPreferences": "உங்கள் விருப்பங்களை பகுப்பாய்வு செய்கிறது...",
+  "aiAnalyzingMessage": "எங்கள் AI உங்களுக்கான சரியான கோரிக்கைகளைக் கண்டுபிடிக்கிறது",
+  "noAiRecommendationsAvailable": "AI பரிந்துரைகள் எதுவும் இல்லை",
+  "acceptedRequestsMovedMessage": "அருமை! உங்கள் ஏற்றுக்கொள்ளப்பட்ட கோரிக்கைகள் முன்னேற்ற கண்காணிப்புக்கு நகர்த்தப்பட்டுள்ளன",
+  "completeProjectsAiMessage": "எங்கள் AI உங்கள் விருப்பங்களைக் கற்றுக்கொள்ள சில திட்டங்களை முடிக்கவும்",
+  "refreshRecommendations": "பரிந்துரைகளை புதுப்பிக்கவும்",
+  "percentMatch": "{score}% பொருத்தம்",
+  "percentWin": "{chance}% வெற்றி",
+  "awaitingCustomerResponse": "வாடிக்கையாளர் பதிலுக்காக காத்திருக்கிறது",
+  "tapViewFullDetails": "முழு விவரங்களைப் பார்க்க எங்கும் தட்டவும்",
+  "filter": "வடிகட்டி: ",
+  "available": "கிடைக்கும்",
+  "open": "திறந்த",
+  "quoted": "மேற்கோள் காட்டப்பட்ட",
+  "inProgress": "செயலில்",
+  "completed": "முடிந்தது",
+  "loadingRequests": "கோரிக்கைகளை ஏற்றுகிறது...",
+  "errorLoadingRequests": "கோரிக்கைகளை ஏற்றுவதில் பிழை",
+  "checkInternetRetry": "உங்கள் இணைய இணைப்பைச் சரிபார்த்து மீண்டும் முயற்சிக்கவும்",
+  "retry": "மீண்டும் முயற்சி",
+  "noActiveRequestsAvailable": "எந்த செயலில் உள்ள கோரிக்கைகளும் இல்லை",
+  "newOpenRequestsMessage": "நீங்கள் மேற்கோள் காட்டக்கூடிய புதிய திறந்த கோரிக்கைகள் இங்கே தோன்றும்",
+  "noOpenRequestsAvailable": "திறந்த கோரிக்கைகள் எதுவும் இல்லை",
+  "newRequestsQuoteMessage": "நீங்கள் மேற்கோள் காட்டக்கூடிய புதிய கோரிக்கைகள் இங்கே தோன்றும்",
+  "noPendingQuotations": "நிலுவையில் உள்ள மேற்கோள்கள் எதுவும் இல்லை",
+  "quotationsAwaitingMessage": "வாடிக்கையாளர் பதிலுக்காக காத்திருக்கும் மேற்கோள்கள் இங்கே தோன்றும்",
+  "noRequestsInProgress": "செயலில் உள்ள கோரிக்கைகள் எதுவும் இல்லை",
+  "acceptedRequestsMessage": "உங்கள் ஏற்றுக்கொள்ளப்பட்ட கோரிக்கைகள் இங்கே தோன்றும்",
+  "noCompletedRequests": "முடிக்கப்பட்ட கோரிக்கைகள் எதுவும் இல்லை",
+  "completedWorkMessage": "உங்கள் முடிக்கப்பட்ட வேலை இங்கே தோன்றும்",
+  "noRequestsFound": "கோரிக்கைகள் எதுவும் கிடைக்கவில்லை",
+  "checkBackLaterMessage": "புதிய கோரிக்கைகளுக்கு பின்னர் மீண்டும் சரிபார்க்கவும்",
+  "yourPerformance": "உங்கள் செயல்திறன்",
+  "marketOpportunities": "சந்தை வாய்ப்புகள்",
+  "strategicRecommendations": "மூலோபாயப் பரிந்துரைகள்",
+  "loadingInsights": "உங்கள் நுண்ணறிவுகளை ஏற்றுகிறது...",
+  "noInsightsAvailableYet": "இன்னும் நுண்ணறிவுகள் இல்லை",
+  "completeProjectsInsightsMessage": "உங்கள் செயல்திறன் நுண்ணறிவுகளைப் பார்க்க சில திட்டங்களை முடிக்கவும்",
+  "errorOpeningChat": "உரையாடல் திறப்பதில் பிழை: {error}",
+  "customer": "வாடிக்கையாளர்",
+  "artisan": "கைவினைஞர்",
+  "noDescriptionProvided": "விளக்கம் எதுவும் வழங்கப்படவில்லை",
+  "budget": "பட்ஜெட்",
+  "quotations": "மேற்கோள்கள்",
+  "quotation": "மேற்கோள்",
+  "imagesAvailable": "{count} படங்கள் கிடைக்கின்றன",
+  "openChat": "உரையாடல்",
+  "viewCollaboration": "ஒத்துழைப்பைப் பார்க்கவும்",
+  "startCollaboration": "ஒத்துழைப்பைத் தொடங்கவும்",
+  "markCompleted": "முடிந்ததாகக் குறிக்கவும்",
+  "editQuotation": "மேற்கோள் திருத்தவும்",
+  "submitQuotation": "மேற்கோள் சமர்ப்பிக்கவும்",
+  "deadlinePassed": "இந்த கோரிக்கைக்கான காலக்கெடு கடந்துள்ளது",
+  "requestDetails": "கோரிக்கை விவரங்கள்",
+  "requestTitle": "தலைப்பு",
+  "requestDeadline": "காலக்கெடு",
+  "images": "படங்கள்",
+  "myQuotation": "என் மேற்கோள்",
+  "deliveryDate": "விநியோக தேதி",
+  "notes": "குறிப்புகள்",
+  "status": "நிலை",
+  "otherQuotations": "மற்ற மேற்கோள்கள்",
+  "noOtherQuotations": "இன்னும் வேறு மேற்கோள்கள் சமர்ப்பிக்கப்படவில்லை",
+  "close": "மூடு",
+  "priceRupees": "விலை (₹)",
+  "enterAmount": "தொகையை உள்ளிடவும்",
+  "deliveryDateSelection": "விநியோக தேதி",
+  "selectDeliveryDate": "விநியோக தேதியைத் தேர்ந்தெடுக்கவும்",
+  "addNotesOptional": "குறிப்புகள் சேர்க்கவும் (விருப்பம்)",
+  "update": "புதுப்பிப்பு",
+  "customerExpectedBy": "வாடிக்கையாளர் எதிர்பார்ப்பு",
+  "yourDeliveryDate": "உங்கள் விநியோக தேதி",
+  "selectedDate": "தேர்ந்தெடுக்கப்பட்டது: {date}",
+  "tapToSelectDate": "தேதியைத் தேர்ந்தெடுக்க தட்டவும்",
+  "dateExceedsCustomerDeadline": "⚠️ உங்கள் தேதி வாடிக்கையாளரின் காலக்கெடுவுக்குப் பிறகு {days} நாட்கள்",
+  "deliveryDateExceedsDeadline": "விநியோக தேதி வாடிக்கையாளரின் காலக்கெடுவை மீறுகிறது",
+  "customerDeadlineText": "வாடிக்கையாளர் காலக்கெடு: {date}",
+  "yourProposedDate": "உங்கள் முன்மொழியப்பட்ட தேதி: {date}",
+  "daysAfterDeadline": "காலக்கெடுவுக்குப் பிறகு நாட்கள்: {days}",
+  "lateDeliveryWarning": "⚠️ எச்சரிக்கை: தாமத விநியோக தாக்கம்",
+  "lateDeliveryImpactMessage": "வாடிக்கையாளரின் காலக்கெடுவுக்குப் பிறகு விநியோகம் செய்வது:",
+  "lowerAcceptanceChance": "• உங்கள் மேற்கோள் ஏற்றுக்கொள்ளும் வாய்ப்புகளை குறைக்கும்",
+  "affectRatings": "• உங்கள் மதிப்பீடுகள் மற்றும் எதிர்கால பரிந்துரைகளை பாதிக்கும்",
+  "customerSatisfaction": "• வாடிக்கையாளர் திருப்தியை பாதிக்கும்",
+  "considerRevisiting": "💡 சரியான நேரத்தில் விநியோகத்திற்கான உங்கள் நற்பெயரை பராமரிக்க உங்கள் கால அட்டவணையை மறுபரிசீலனை செய்யவும் அல்லது இந்த கோரிக்கையை நிராகரிக்கவும்.",
+  "chooseDifferentDate": "வேறு தேதியைத் தேர்ந்தெடுக்கவும்",
+  "updateQuotation": "மேற்கோள் புதுப்பிக்கவும்",
+  "noExistingQuotation": "திருத்துவதற்கு ஏற்கனவே உள்ள மேற்கோள் எதுவும் கிடைக்கவில்லை.",
+  "quotationUpdated": "மேற்கோள் புதுப்பிக்கப்பட்டது",
+  "updatedQuotationMessage": "{artisanName} \"{title}\" க்கான அவர்களின் மேற்கோளை புதுப்பித்தார்",
+  "quotationSubmitted": "மேற்கோள் சமர்ப்பிக்கப்பட்டது",
+  "submittedQuotationMessage": "{artisanName} \"{title}\" க்கான மேற்கோளைச் சமர்ப்பித்தார்",
+  "editQuotationDialog": "மேற்கோள் திருத்தவும்",
+  "submitQuotationDialog": "மேற்கோள் சமர்ப்பிக்கவும்",
+  "chat": "உரையாடல்",
+  "today": "இன்று",
+  "yesterday": "நேற்று",
+  "tomorrow": "நாளை",
+  "daysAgo": "{days} நாட்களுக்கு முன்பு",
+  "inDays": "{days} நாட்களில்",
+  "userNotAuthenticated": "பயனர் அங்கீகரிக்கப்படவில்லை",
+  "quotationNotFound": "உங்கள் மேற்கோள் கிடைக்கவில்லை",
+  "action": "செயல்: {action}",
+  "impact": "தாக்கம்: {impact}",
+  "noReasonProvided": "காரணம் எதுவும் வழங்கப்படவில்லை",
+  "noRecommendationAvailable": "பரிந்துரை எதுவும் கிடைக்கவில்லை",
+  "successRate": "வெற்றி விகிதம்",
+  "avgProjectValue": "சராசரி திட்ட மதிப்பு",
+  "strongCategories": "வலுவான வகைகள்",
+  "noPerformanceDataAvailable": "இன்னும் செயல்திறன் தகவல் எதுவும் கிடைக்கவில்லை",
+  "unknown": "தெரியாதது",
+  "imagesAttached": "படங்கள்: {count} இணைக்கப்பட்டுள்ளது",
+  "deadlinePassedCannotSubmit": "கால அவகாசம் முடிந்துவிட்டது - மேற்கோள் சமர்ப்பிக்க முடியாது",
+  "untitledRequest": "தலைப்பில்லாத கோரிக்கை",
+  "referenceImages": "குறிப்பு படங்கள்",
+  "deliveryTime": "வழங்கல் நேரம்",
+  "notSpecified": "குறிப்பிடப்படவில்லை",
+  "anonymousArtisan": "அநாமதேய கைவினைஞர்",
+  "openForCollaboration": "ஒத்துழைப்பிற்காக திற",
+  "manageCollaboration": "ஒத்துழைப்பு மேலாண்மை",
+  "highPriority": "அதிக முன்னுரிமை",
+  "mediumPriority": "நடுத்தர",
+  "highLabel": "அதிக",
+  "inProgressStatus": "செயல்பாட்டில்",
+  "youHaveProductsInCategory": "இந்த வகையில் உங்களிடம் {count} தயாரிப்புகள் உள்ளன",
+  "focusOnCategoryForBetterRate": "சிறந்த வெற்றி விகிதத்திற்காக {category} கோரிக்கைகளில் கவனம் செலுத்துங்கள்",
+  "focusOnImprovingQuotation": "மேற்கோள் தரம் மற்றும் விலை நிர்ணய மூலோபாயத்தை மேம்படுத்துவதில் கவனம் செலுத்துங்கள்",
+  "increaseWinRateBy": "வெற்றி விகிதத்தை {percentage} அதிகரிக்கவும்",
+  "next30Days": "அடுத்த 30 நாட்கள்",
+  "statusOpen": "திற",
+  "statusInProgress": "செயல்பாட்டில்",
+  "statusCompleted": "முடிந்தது",
+  "statusCancelled": "ரத்து",
+  "statusDeleted": "நீக்கப்பட்டது",
+  "whyPerfectForYou": "இது உங்களுக்கு ஏன் சிறந்தது:",
+  "aiStrategyTip": "AI மூலோபாய குறிப்பு:",
+  "quotationSubmittedAwaiting": "மேற்கோள் சமர்ப்பிக்கப்பட்டது - பதிலுக்காக காத்திருக்கிறது",
+  "noInsightsAvailable": "நுண்ணறிவுகள் எதுவும் கிடைக்கவில்லை",
+  "completeProjectsToSeeInsights": "உங்கள் செயல்திறன் நுண்ணறிவுகள் மற்றும் சந்தை வாய்ப்புகளைக் காண சில திட்டங்களை முடித்து மேற்கோள்களைச் சமர்ப்பிக்கவும்।",
+  "collaborationProjectNotFound": "ஒத்துழைப்பு திட்டம் கிடைக்கவில்லை। நிலை மீட்டமைக்கப்பட்டது।",
+  "errorAccessingCollaboration": "ஒத்துழைப்பை அணுகுவதில் பிழை: {error}",
+  "collaborationProjectCreatedSuccessfully": "ஒத்துழைப்பு திட்டம் வெற்றிகரமாக உருவாக்கப்பட்டது!",
+  "cannotCreateCollaboration": "இந்த கோரிக்கைக்கு ஒத்துழைப்பை உருவாக்க முடியாது",
+  "requestMarkedCompleted": "கோரிக்கை நிறைவேற்றப்பட்டதாக குறிக்கப்பட்டது!",
+  "livingWorkshop": "வாழும் பணிமனை",
+  "artisanForum": "கைவினைஞர் மன்றம்",
+  "allPosts": "அனைத்து இடுகைகள்",
+  "trending": "பிரபலமானவை",
+  "myPosts": "என் இடுகைகள்",
+  "askQuestion": "கேள்வி கேளுங்கள்",
+  "searchPostsHint": "இடுகைகள், குறிச்சொற்களைத் தேடுங்கள்...",
+  "allCategories": "வகைகள்",
+  "unresolvedOnly": "தீர்க்கப்படாதவை",
+  "errorLoadingPosts": "இடுகைகளை ஏற்றுவதில் பிழை: {error}",
+  "noPostsFound": "இடுகைகள் எதுவும் கிடைக்கவில்லை",
+  "beFirstToAsk": "முதலில் கேள்வி கேட்பவராக இருங்கள்!",
+  "errorLoadingTrendingPosts": "பிரபலமான இடுகைகளை ஏற்றுவதில் பிழை: {error}",
+  "noTrendingPostsThisWeek": "இந்த வாரம் பிரபலமான இடுகைகள் எதுவும் இல்லை",
+  "pleaseLogInToViewPosts": "உங்கள் இடுகைகளைப் பார்க்க தயவுசெய்து உள்நுழையவும்",
+  "errorLoadingYourPosts": "உங்கள் இடுகைகளை ஏற்றுவதில் பிழை: {error}",
+  "noQuestionsPostedYet": "நீங்கள் இன்னும் எந்த கேள்விகளையும் இடுகையிடவில்லை",
+  "trendingBadge": "பிரபலமான",
+  "resolvedBadge": "தீர்க்கப்பட்டது",
+  "voiceMessageIncluded": "குரல் செய்தி சேர்க்கப்பட்டுள்ளது",
+  "hoursAgo": "{hours} மணி நேரம் முன்பு",
+  "minutesAgo": "{minutes} நிமிடங்கள் முன்பு",
+  "justNow": "இப்போதுதான்",
+  "forumAccessRestricted": "மன்ற அணுகல் விற்பனையாளர்களுக்கு மட்டுமே.",
+  "questionTitle": "கேள்வி தலைப்பு *",
+  "questionTitleHint": "உங்கள் கேள்வி என்ன?",
+  "enterQuestionTitle": "உங்கள் கேள்விக்கு தலைப்பு உள்ளிடவும்",
+  "questionContent": "கேள்வி விவரங்கள்",
+  "describeQuestionHint": "உங்கள் கேள்வியை விரிவாக விவரிக்கவும்...",
+  "voiceMessage": "குரல் செய்தி",
+  "recordVoiceMessage": "உங்கள் கேள்வியை சிறப்பாக விளக்க குரல் செய்தியைப் பதிவு செய்யவும்",
+  "voiceRecorded": "குரல் செய்தி பதிவு செய்யப்பட்டது ({duration})",
+  "removeVoiceMessage": "குரல் செய்தியை அகற்று",
+  "tags": "குறிச்சொற்கள் (கமாவால் பிரிக்கப்பட்ட)",
+  "tagsHint": "எ.கா., உலோக வேலை, மர வேலை, மண்பாண்டம்",
+  "postQuestion": "கேள்வி இடுகை",
+  "postCreatedSuccessfully": "இடுகை வெற்றிகரமாக உருவாக்கப்பட்டது!",
+  "errorCreatingPost": "இடுகையை உருவாக்குவதில் பிழை: {error}",
+  "ensureSellerLogin": "மன்றத்தை அணுக விற்பனையாளராக உள்நுழைந்துள்ளீர்கள் என்பதை உறுதிப்படுத்தவும்.",
+  "provideContentOrVoice": "உரை உள்ளடக்கம் அல்லது குரல் செய்தியை வழங்கவும்",
+  "errorAccessingForum": "மன்றத்தை அணுகுவதில் பிழை: {error}",
+  "commentAddedSuccessfully": "கருத்து வெற்றிகரமாக சேர்க்கப்பட்டது",
+  "errorAddingComment": "கருத்தைச் சேர்ப்பதில் பிழை: {error}",
+  "writeComment": "கருத்து எழுதுங்கள்...",
+  "addComment": "கருத்து சேர்க்க",
+  "comments": "கருத்துகள்",
+  "noCommentsYet": "இன்னும் கருத்துகள் எதுவும் இல்லை. உதவ முதலில் இருங்கள்!",
+  "markAsResolved": "தீர்க்கப்பட்டதாக குறிக்கவும்",
+  "markedAsResolved": "இடுகை தீர்க்கப்பட்டதாக குறிக்கப்பட்டது",
+  "errorMarkingResolved": "தீர்க்கப்பட்டதாக குறிப்பதில் பிழை: {error}",
+  "playVoiceMessage": "குரல் செய்தியை இயக்கு",
+  "stopVoiceMessage": "குரல் செய்தியை நிறுத்து",
+    "transcription": "டிரான்ஸ்கிரிப்ஷன்: {text}",
+  "transcriptionLabel": "டிரான்ஸ்கிரிப்ஷன்:",
+  "answers": "பதில்கள்",
+  "acceptedAnswer": "ஏற்றுக்கொள்ளப்பட்ட பதில்",
+  "helpful": "உதவிகரமான",
+  "acceptAnswer": "பதிலை ஏற்றுக்கொள்",
+  "submit": "சமர்ப்பிக்க",
+  "markedAsHelpful": "உதவிகரமானதாக குறிக்கப்பட்டது",
+  "errorPlayingVoice": "குரல் செய்தியை இயக்குவதில் பிழை",
+  "markedAsAcceptedAnswer": "ஏற்றுக்கொள்ளப்பட்ட பதிலாக குறிக்கப்பட்டது",
+  "errorGeneral": "பிழை: {error}",
+  "postNotFound": "பதிவு கிடைக்கவில்லை",
+  "postNotFoundMessage": "பதிவு கிடைக்கவில்லை அல்லது நீக்கப்பட்டது.",
+  "priority": "முன்னுரிமை"
 }
